--- a/files/sony/ps2.html
+++ b/files/sony/ps2.html
@@ -35,7 +35,7 @@ ____) | |_| | |  | |__| | (_) | |
              
           </div>
         </div>
-        <script src="../../assets/js/import.js"></script>d
+        <script src="../../assets/js/import.js"></script>
         <script src="https://unpkg.com/xregexp/xregexp-all.js"></script>
         <script src="../../assets/js/jquerry.min.js"></script>
         <script src="../../assets/js/search.js"></script>
