--- a/files/sony/ps2.html
+++ b/files/sony/ps2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyVaut</title>
     <link rel="stylesheet" href="../../assets/css/styes.css">
+    <script type="text/javascript" src="../../assets/js/jquerry.min.js"></script>
 </head>
 <body>
   <pre style="font: 10px/9px monospace; color: rgb(102, 202, 202); text-align: center;">
@@ -35,9 +36,8 @@ ____) | |_| | |  | |__| | (_) | |
              
           </div>
         </div>
-        <script src="../../assets/js/import.js"></script>
+        <script type="text/javascript" src="../../assets/js/import.js"></script>
         <script src="https://unpkg.com/xregexp/xregexp-all.js"></script>
-        <script src="../../assets/js/jquerry.min.js"></script>
-        <script src="../../assets/js/search.js"></script>
+        <script type="text/javascript" src="../../assets/js/search.js"></script>
       </body>
 </html>
