--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyVaut</title>
     <link rel="stylesheet" href="./assets/css/styes.css">
+    <script type="text/javascript" src="./assets/js/jquerry.min.js"></script>
 </head>
 <body>
   <pre style="font: 10px/9px monospace; color: rgb(102, 202, 202); text-align: center;">
@@ -46,7 +47,7 @@ ____) | |_| | |  | |__| | (_) | |
             </table>
           </div>
         </div>
-        <script src="./assets/js/jquerry.min.js"></script>
-        <script src="/assets/js/search.js"></script>
+        <script src="https://unpkg.com/xregexp/xregexp-all.js"></script>
+        <script type="text/javascript" src="/assets/js/search.js"></script>
       </body>
 </html>
