revert link name change

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@ ____) | |_| | |  | |__| | (_) | |
             <table id="list"><thead><tr><th style="max-width: 800px; min-width: 800px;"><a href="?C=N&amp;O=A">Folder Name</a>&nbsp;<a href="?C=N&amp;O=D">&nbsp;&nbsp;</a></th><th style="width:25%"><a href="?C=M&amp;O=A">Date Added</a>&nbsp;<a href="?C=M&amp;O=D">&nbsp;&nbsp;</a></th></tr></thead>
               <tbody>
                 <!-- Sony -->
-                <tr><td class="link"><a href="https://gamingoninsulin.github.io/gitstorage/files/sony/psp.html" title="playstation_porstable">[PSP] Playstation Portable</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="https://gamingoninsulin.github.io/gitstorage/files/sony/ps1.html" title="playstation_porstable">[PS1] Playstation Plastation 1</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="https://gamingoninsulin.github.io/gitstorage/files/sony/ps2.html" title="playstation_porstable">[PS2] Playstation Plastation 2</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="https://gamingoninsulin.github.io/gitstorage/files/sony/ps3.html" title="playstation_porstable">[PS3] Playstation Plastation 3</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./files/sony/psp.html" title="playstation_porstable">[PSP] Playstation Portable</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./files/sony/ps1.html" title="playstation_porstable">[PS1] Playstation Plastation 1</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./files/sony/ps2.html" title="playstation_porstable">[PS2] Playstation Plastation 2</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./files/sony/ps3.html" title="playstation_porstable">[PS3] Playstation Plastation 3</a></td><td class="date">09-12-2024 14:08</td></tr>
                 
                 <!-- Nintendo -->
-                <tr><td class="link"><a href="https://gamingoninsulin.github.io/gitstorage/files/nintendo/gb.html" title="playstation_porstable">[GB/GBA] Gameboy</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="https://gamingoninsulin.github.io/gitstorage/files/nintendo/nds.html" title="playstation_porstable">[NDS] Nintendo DS</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="https://gamingoninsulin.github.io/gitstorage/files/nintendo/switch.html" title="playstation_porstable">[SWITCH] Ninetendo Switch</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./files/nintendo/gb.html" title="playstation_porstable">[GB/GBA] Gameboy</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./files/nintendo/nds.html" title="playstation_porstable">[NDS] Nintendo DS</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./files/nintendo/switch.html" title="playstation_porstable">[SWITCH] Ninetendo Switch</a></td><td class="date">09-12-2024 14:08</td></tr>
               </tbody>
             </table>
           </div>
