revert all changes to default

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyVaut</title>
-    <link rel="stylesheet" href="./assets/css/styes.css">
-    <script type="text/javascript" src="./assets/js/jquerry.min.js"></script>
+    <link rel="stylesheet" href="./styes.css">
+    <script type="text/javascript" src="./jquerry.min.js"></script>
 </head>
 <body>
   <pre style="font: 10px/9px monospace; color: rgb(102, 202, 202); text-align: center;">
@@ -19,7 +19,7 @@ ____) | |_| | |  | |__| | (_) | |
   <pre style="font: 14px/13px monospace; color: white; text-align: center;">Where Nostalgia Lives On</pre>
        <br>
        <div class="row">
-        <a href="../../index.html" class="menu">[Home]</a>
+        <a href="./index.html" class="menu">[Home]</a>
         <a href="#" class="menu" target="_blank">[Discord]</a>
         </div>
         <br>
@@ -34,20 +34,20 @@ ____) | |_| | |  | |__| | (_) | |
             <table id="list"><thead><tr><th style="max-width: 800px; min-width: 800px;"><a href="?C=N&amp;O=A">Folder Name</a>&nbsp;<a href="?C=N&amp;O=D">&nbsp;&nbsp;</a></th><th style="width:25%"><a href="?C=M&amp;O=A">Date Added</a>&nbsp;<a href="?C=M&amp;O=D">&nbsp;&nbsp;</a></th></tr></thead>
               <tbody>
                 <!-- Sony -->
-                <tr><td class="link"><a href="./files/sony/psp.html" title="playstation_porstable">[PSP] Playstation Portable</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="./files/sony/ps1.html" title="playstation_porstable">[PS1] Playstation Plastation 1</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="./files/sony/ps2.html" title="playstation_porstable">[PS2] Playstation Plastation 2</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="./files/sony/ps3.html" title="playstation_porstable">[PS3] Playstation Plastation 3</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./psp.html" title="playstation_porstable">[PSP] Playstation Portable</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./ps1.html" title="playstation_porstable">[PS1] Playstation Plastation 1</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./ps2.html" title="playstation_porstable">[PS2] Playstation Plastation 2</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./ps3.html" title="playstation_porstable">[PS3] Playstation Plastation 3</a></td><td class="date">09-12-2024 14:08</td></tr>
                 
                 <!-- Nintendo -->
-                <tr><td class="link"><a href="./files/nintendo/gb.html" title="playstation_porstable">[GB/GBA] Gameboy</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="./files/nintendo/nds.html" title="playstation_porstable">[NDS] Nintendo DS</a></td><td class="date">09-12-2024 14:08</td></tr>
-                <tr><td class="link"><a href="./files/nintendo/switch.html" title="playstation_porstable">[SWITCH] Ninetendo Switch</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./gb.html" title="playstation_porstable">[GB/GBA] Gameboy</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./nds.html" title="playstation_porstable">[NDS] Nintendo DS</a></td><td class="date">09-12-2024 14:08</td></tr>
+                <tr><td class="link"><a href="./switch.html" title="playstation_porstable">[SWITCH] Ninetendo Switch</a></td><td class="date">09-12-2024 14:08</td></tr>
               </tbody>
             </table>
           </div>
         </div>
         <script src="https://unpkg.com/xregexp/xregexp-all.js"></script>
-        <script type="text/javascript" src="/assets/js/search.js"></script>
+        <script type="text/javascript" src="./search.js"></script>
       </body>
 </html>
